fix menu button covered by blog card images

--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ html, body {
 #menu-button {
   display: none;
   position: fixed;
+  z-index: 2;
   right: 10px;
   top: 10px;
   background: rgba(0, 0, 0, 0.7);
